# ventilator-FI5

./: .gitattributes  .gitignore  LICENSE  README.md  VX-209503.stp  Ventilator FI5 BOM Rev0.xlsx  Ventilator FI5 BOM Rev1.xlsx
.github/workflows/: create-release.yml
VentilatorUI/: Application.ewu  Application.ewu.bak  CMakeLists.txt  README.md  VentilatorUI.ewp  VentilatorUI.ewp.bak  VentilatorUI.ews
VentilatorUI/stm32ResVersion/: Application.ewu  Application.ewu.bak  VentilatorUI.ewp  VentilatorUI.ews
application/: README.md
application/proj/: fi5app.uvoptx  fi5app.uvprojx
assets/: README.md
board/CTR1P_00/: SE_CTR1P_00.DSN
board/CTR1S/: SE_CTR1S_01.DSN  (+1 more)
datasheets/: AP-Ø2.4.xlsx  MouserSearchFlowSensors.csv  Test-AP-Ø2.4mm.xlsx
drivers/: Makefile  README.md  access_once.h  analog.h  board_driver.c  board_driver.h  board_sim.c  board_sim.h  board_test.c  button.c  button.h  buzzer.h  delay.h  delay_mock.h  encoder.c  encoder.h  hal.c  hal.h  hsc.c  hsc.h  hsc_test.c  i2c_api.h  i2c_mux.c  i2c_mux.h  mcp23017.c  mcp23017.h  mcp23017_test.c  pwm.c  pwm.h  test_utils.c  test_utils.h  zephyr.c  zephyr.h  zephyr_test.c
fsm/: .gitignore  AlarmIndex.m  ControlMode.m  KnobsIndex.m  MapIndex.m  README.md  StateButton.m  StateLed.m  fsm.slx  params.mat
libraries/: README.md
log/: import_FI5_log.m  plot_FI5_log.m
models/: README.md
requirements/: requirements_RegulationComparison.xlsx
sw/: sw.ioc
tests/: README.md  Test-CP_with_Series130-363.xlsx
tooling/: VX-209631.stp
wiring/: Ventilator FI5 - Harness - BOM Rev0.0.5.xlsx  Ventilator FI5 -Harness - BOM Rev0.0.5.xlsx
(+630 files in other folders)
